objects/Translated_Asset__c.object
<CustomObject>
    <description>Used by Q-Labs Translation Droid Tool to keep track of already Translated assets inside an Org</description>
    <fields>
        <fullName>Asset_Reference__c</fullName>
        <label>Asset Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lightning</fullName>
                </value>
                <value>
                    <fullName>VF Page</fullName>
                </value>
                <value>
                    <fullName>Chatter Post</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Translated Asset</label>
    <nameField>
        <displayFormat>TA-{000000000}</displayFormat>
        <label>Translated Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Translated Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>